# HARC_Connect_Test

./: .gitignore  CMakeLists.txt  nrf52dk_nrf52832.overlay  prj.conf
.claude/: settings.local.json
documents_misc/: zephyr_framework_modifications.tex
documents_misc/charts_and_diagrams/: bonding.mmd  vcp_discovery.mmd  vcs_disc.mmd  vcs_gatt_discovery.mmd
documents_misc/charts_and_diagrams/User_Interaction_Flows/: vol_up.mmd
documents_misc/charts_and_diagrams/system/: system_overview.drawio
documents_misc/charts_and_diagrams/timetables/: 1.mmd
mermaid_charts/User_Interaction_Flows/: pair_1.mmd  pair_2.mmd  preset.mmd  vol_down.mmd
mermaid_charts/timetables/: 2.mmd
patches/: 0001-Bluetooth-audio-HAS-Add-handle-getter-setter-APIs-fo.patch  0002-Bluetooth-audio-VCP-Add-handle-getter-setter-APIs-fo.patch  README.md
src/: app_controller.c  app_controller.h  bas_settings.c  bas_settings.h  battery_reader.c  battery_reader.h  ble_manager.c  ble_manager.h  button_handler.c  button_handler.h  button_manager.c  button_manager.h  connection_manager.c  connection_manager.h  connection_strategy.c  connection_strategy.h  csip_coordinator.c  csip_coordinator.h  devices_manager.c  devices_manager.h  display_manager.c  display_manager.h  has_controller.c  has_controller.h  has_settings.c  has_settings.h  main.c  oled_display.c  oled_display.h  power_manager.c  power_manager.h  vcp_controller.c  vcp_controller.h  vcp_settings.c  vcp_settings.h
